--- a/Game1.vcxproj.filters
+++ b/Game1.vcxproj.filters
@@ -79,6 +79,9 @@
     <None Include="res\Game1.rc2">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="arrow.cur">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Game1.rc">
